# xane

./: Fuentes  README.md  index.html  params.json  readme.md
xane-colorscheme/: XaneDarkgreen.colors  XaneDarkyellow.colors  XaneLight.colors  XaneLightbrown.colors  XaneLightgreen.colors  XaneLightyellow.colors
xane-dark/mimetypes/32/: application-wps-office.pot.svgz
xane-dark/mimetypes/64/: application-wps-office.pptx.svgz
xane-icons/xane-dark/: CMakeLists.txt
xane-icons/xane-dark/mimetypes/32/: application-wps-office.ppt.svgz
xane-icons/xane-darkblue/: index.theme
xane-icons/xane-darkblue/mimetypes/32/: application-wps-office.xls.svgz
xane-icons/xane-darkblue/mimetypes/64/: application-wps-office.potx.svgz  application-wps-office.xlt.svgz  application-wps-office.xltx.svgz
xane-icons/xane-darkbrown/: index.theme
xane-icons/xane-darkgreen/: index.theme
xane-icons/xane-darkgreen/mimetypes/32/: application-wps-office.et.svgz
xane-icons/xane-darkyellow/: index.theme
xane-icons/xane-darkyellow/mimetypes/32/: application-wps-office.wpt.svgz
xane-icons/xane-light/: CMakeLists.txt  index.theme
xane-icons/xane-lightblue/: index.theme
xane-icons/xane-lightblue/mimetypes/64/: application-wps-office.xlsx.svgz
xane-icons/xane-lightbrown/: index.theme
xane-icons/xane-lightgreen/: index.theme
xane-icons/xane-lightyellow/: index.theme
xane-kwin/xane-dark/: metadata.desktop
xane-kwin/xane-dark/contents/ui/: main.qml
xane-kwin/xane-nb/: metadata.desktop
xane-light/mimetypes/32/: application-wps-office.ett.svgz
xane-plasma/xane-light/: CMakeLists.txt  metadata.desktop
xane-plasma/xane-light/dialogs/: background.svgz
xane-plasma/xane-light/icons/: apport.svgz  battery.svgz  choqok.svgz  device.svgz  document.svgz  edit.svgz  notification.svgz  recorditnow.svgz  simpleaudioplayer.svgz  slc.svgz  software-updates.svgz  system.svgz  touchpad.svgz  view.svgz  zoom.svgz
xane-plasma/xane-light/widgets/: action-overlays.svgz  actionbutton.svgz  arrows.svgz  bar_meter_horizontal.svgz  bar_meter_vertical.svgz  busywidget.svgz  button.svgz  checkmarks.svgz  pager.svgz  slider.svgz  tabbar.svgz  tasks.svgz  viewitem1.svgz  viewitem2.svgz
xane-plasma/xane-lightblue/: CMakeLists.txt  colors  metadata.desktop
xane-plasma/xane-lightblue/icons/: akonadi.svgz  akregator.svgz  applications.svgz  configure.svgz  input.svgz  kalarm.svgz  kdeconnect.svgz  kmail.svgz  kteatime.svgz  mail.svgz  printer.svgz  software.svgz  video.svgz  window.svgz
xane-plasma/xane-lightblue/widgets/: scrollbar.svgz  toolbar.svgz
xane-plasma/xane-lightbrown/: CMakeLists.txt  metadata.desktop
xane-plasma/xane-lightbrown/icons/: bangarang.svgz  bookmarks.svgz  go.svgz  keyboard_layout.svgz  knotes.svgz  konqueror.svgz  korgac.svgz  kpackagekit.svgz  ktorrent.svgz  network.svgz  preferences.svgz  transmission.svgz  video-display.svgz
xane-plasma/xane-lightbrown/widgets/: background.svgz  branding.svgz  tooltip.svgz  translucentbackground.svgz  viewitem1.svgz
xane-plasma/xane-lightgreen/: CMakeLists.txt  metadata.desktop
xane-plasma/xane-lightgreen/icons/: amarok.svgz  distribute.svgz  fcitx.svgz  juk.svgz  kaffeine.svgz  kgpg.svgz  klipper.svgz  konversation.svgz  ktimer.svgz  nepomuk.svgz  phone.svgz  quassel.svgz  smartphone.svgz  wallet.svgz
xane-plasma/xane-lightgreen/widgets/: actionbutton.svgz  pager.svgz
xane-plasma/xane-lightyellow/: CMakeLists.txt  metadata.desktop
xane-plasma/xane-lightyellow/icons/: audio.svgz  cantata.svgz  computer.svgz  dialog.svgz  drive.svgz  kget.svgz  kmess.svgz  kopete.svgz  list.svgz  media.svgz  tomahawk.svgz  user.svgz  view.svgz  yarock.svgz
xane-plasma/xane-lightyellow/widgets/: bar_meter_horizontal.svgz  clock.svgz  configuration-icons.svgz  containment-controls.svgz  panel-background.svgz
xane-plasma/xane_dark/: CMakeLists.txt  colors  metadata.desktop
xane-plasma/xane_dark/dialogs/: background.svgz
xane-plasma/xane_dark/icons/: view.svgz
xane-plasma/xane_dark/widgets/: actionbutton.svgz  bar_meter_horizontal.svgz  bar_meter_vertical.svgz  busywidget.svgz  checkmarks.svgz  clock.svgz  pager.svgz  panel-background.svgz  scrollbar.svgz  slider.svgz  tabbar.svgz  translucentbackground.svgz  viewitem1.svgz
xane-plasma/xane_darkblue/: CMakeLists.txt  metadata.desktop
xane-plasma/xane_darkblue/widgets/: background.svgz
xane-plasma/xane_darkbrown/: CMakeLists.txt  colors  metadata.desktop
xane-plasma/xane_darkbrown/widgets/: bar_meter_horizontal.svgz  checkmarks.svgz  glowbar.svgz  pager.svgz
xane-plasma/xane_darkgreen/: CMakeLists.txt  metadata.desktop
xane-plasma/xane_darkgreen/icons/: start.svgz  view.svgz
xane-plasma/xane_darkgreen/widgets/: clock.svgz  scrollbar.svgz  toolbar.svgz  tooltip.svgz
xane-plasma/xane_darkyellow/: CMakeLists.txt  metadata.desktop
xane-plasma/xane_darkyellow/widgets/: bar_meter_vertical.svgz  busywidget.svgz  viewitem1.svgz  viewitem2.svgz
xane-qtcurve/: CMakeLists.txt  xane-dark.qtcurve
